--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -93,12 +93,14 @@
     <Compile Include="Customer\Model\AddressType.cs" />
     <Compile Include="Customer\Model\Contact.cs" />
     <Compile Include="Customer\Model\Note.cs" />
+    <Compile Include="Customer\Model\Organization.cs" />
     <Compile Include="Customer\Model\Property.cs" />
     <Compile Include="Customer\Model\PropertyValueType.cs" />
     <Compile Include="Customer\Model\SearchCriteria.cs" />
     <Compile Include="Customer\Model\SearchResult.cs" />
-    <Compile Include="Customer\Services\IContactSearchService.cs" />
+    <Compile Include="Customer\Services\ICustomerSearchService.cs" />
     <Compile Include="Customer\Services\IContactService.cs" />
+    <Compile Include="Customer\Services\IOrganizationService.cs" />
     <Compile Include="Fulfillment\Model\FulfillmentCenter.cs" />
     <Compile Include="Fulfillment\Services\IFulfillmentService.cs" />
     <Compile Include="Inventory\Model\InventoryInfo.cs" />
