--- a/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Framework.Web/VirtoCommerce.Framework.Web.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Common\ArrayInputAttribute.cs" />
     <Compile Include="Common\AttributeExtensions.cs" />
     <Compile Include="Common\ClientCacheAttribute.cs" />
+    <Compile Include="Common\DateTimeExtensions.cs" />
     <Compile Include="Common\FormatingExtensions.cs" />
     <Compile Include="Common\KeyValuePairExtensions.cs" />
     <Compile Include="Common\ListDictionary.cs" />
