--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
@@ -135,7 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binders\SearchCriteriaBinder.cs" />
-    <Compile Include="Controllers\Api\MemberController.cs" />
+    <Compile Include="Controllers\Api\CustomerController.cs" />
     <Compile Include="Converters\AddressConverter.cs" />
     <Compile Include="Converters\ContactConverter.cs" />
     <Compile Include="Converters\NoteConverter.cs" />
