customers - adding organizations (in progress)

--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
@@ -105,32 +105,36 @@
   <ItemGroup>
     <Content Include="Scripts\blades\!customer-list.js" />
     <Content Include="Scripts\blades\!customer-list.tpl.html" />
-    <Content Include="Scripts\blades\customer-property-list.js" />
-    <Content Include="Scripts\blades\customer-property-list.tpl.html" />
-    <Content Include="Scripts\blades\customer-detail.js" />
-    <Content Include="Scripts\blades\customer-detail.tpl.html" />
-    <Content Include="Scripts\blades\customer-phones-list.js" />
-    <Content Include="Scripts\blades\customer-emails-list.js" />
-    <Content Include="Scripts\blades\customer-phones-list.tpl.html" />
-    <Content Include="Scripts\blades\customer-emails-list.tpl.html" />
-    <Content Include="Scripts\blades\customer-address-detail.js" />
-    <Content Include="Scripts\blades\customer-address-detail.tpl.html" />
-    <Content Include="Scripts\blades\customer-address-list.js" />
-    <Content Include="Scripts\blades\customer-address-list.tpl.html" />
-    <Content Include="Scripts\blades\customer-property-detail.js" />
-    <Content Include="Scripts\blades\customer-property-detail.tpl.html" />
-    <Content Include="Scripts\blades\customer-property-valueType.js" />
-    <Content Include="Scripts\blades\customer-property-valueType.tpl.html" />
-    <Content Include="Scripts\resources\customers.js" />
+    <Content Include="Scripts\blades\member-add.js" />
+    <Content Include="Scripts\blades\member-add.tpl.html" />
+    <Content Include="Scripts\blades\member-list.js" />
+    <Content Include="Scripts\blades\member-list.tpl.html" />
+    <Content Include="Scripts\blades\member-property-list.js" />
+    <Content Include="Scripts\blades\member-property-list.tpl.html" />
+    <Content Include="Scripts\blades\member-detail.js" />
+    <Content Include="Scripts\blades\member-contact-detail.tpl.html" />
+    <Content Include="Scripts\blades\member-phones-list.js" />
+    <Content Include="Scripts\blades\member-emails-list.js" />
+    <Content Include="Scripts\blades\member-phones-list.tpl.html" />
+    <Content Include="Scripts\blades\member-emails-list.tpl.html" />
+    <Content Include="Scripts\blades\member-address-detail.js" />
+    <Content Include="Scripts\blades\member-address-detail.tpl.html" />
+    <Content Include="Scripts\blades\member-address-list.js" />
+    <Content Include="Scripts\blades\member-address-list.tpl.html" />
+    <Content Include="Scripts\blades\member-property-detail.js" />
+    <Content Include="Scripts\blades\member-property-detail.tpl.html" />
+    <Content Include="Scripts\blades\member-property-valueType.js" />
+    <Content Include="Scripts\blades\member-property-valueType.tpl.html" />
+    <Content Include="Scripts\resources\members.js" />
     <Content Include="Scripts\customer.js" />
-    <Content Include="Scripts\widgets\customerPhonesWidget.js" />
-    <Content Include="Scripts\widgets\customerEmailsWidget.js" />
-    <Content Include="Scripts\widgets\!customerAddressesWidget.js" />
-    <Content Include="Scripts\widgets\customerPhonesWidget.tpl.html" />
-    <Content Include="Scripts\widgets\customerEmailsWidget.tpl.html" />
-    <Content Include="Scripts\widgets\!customerAddressesWidget.tpl.html" />
-    <Content Include="Scripts\widgets\customerPropertyWidget.js" />
-    <Content Include="Scripts\widgets\customerPropertyWidget.tpl.html" />
+    <Content Include="Scripts\widgets\memberPhonesWidget.js" />
+    <Content Include="Scripts\widgets\memberEmailsWidget.js" />
+    <Content Include="Scripts\widgets\!memberAddressesWidget.js" />
+    <Content Include="Scripts\widgets\memberPhonesWidget.tpl.html" />
+    <Content Include="Scripts\widgets\memberEmailsWidget.tpl.html" />
+    <Content Include="Scripts\widgets\!memberAddressesWidget.tpl.html" />
+    <Content Include="Scripts\widgets\memberPropertyWidget.js" />
+    <Content Include="Scripts\widgets\memberPropertyWidget.tpl.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
