--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/VirtoCommerce.CustomerModule.Web.csproj
@@ -107,12 +107,13 @@
     <Content Include="Scripts\blades\!customer-list.tpl.html" />
     <Content Include="Scripts\blades\member-add.js" />
     <Content Include="Scripts\blades\member-add.tpl.html" />
+    <Content Include="Scripts\blades\organization-detail.tpl.html" />
     <Content Include="Scripts\blades\member-list.js" />
     <Content Include="Scripts\blades\member-list.tpl.html" />
     <Content Include="Scripts\blades\member-property-list.js" />
     <Content Include="Scripts\blades\member-property-list.tpl.html" />
     <Content Include="Scripts\blades\member-detail.js" />
-    <Content Include="Scripts\blades\member-contact-detail.tpl.html" />
+    <Content Include="Scripts\blades\customer-detail.tpl.html" />
     <Content Include="Scripts\blades\member-phones-list.js" />
     <Content Include="Scripts\blades\member-emails-list.js" />
     <Content Include="Scripts\blades\member-phones-list.tpl.html" />
