--- a/src/Presentation/WebAdmin/Modules/PaymentGateways/Klarna.PaymentGatewaysModule.Web/Klarna.PaymentGatewaysModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/PaymentGateways/Klarna.PaymentGatewaysModule.Web/Klarna.PaymentGatewaysModule.Web.csproj
@@ -182,7 +182,7 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(SolutionDir)\targets\VirtoCommerce.Module.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
     <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
