Remove WebDAV - workaround for PUT-methods

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
@@ -38,6 +38,7 @@
     <system.webServer>
         <modules runAllManagedModulesForAllRequests="true">
             <remove name="FormsAuthentication" />
+            <remove name="WebDAVModule" />
         </modules>
         <validation validateIntegratedModeConfiguration="false" />
 
@@ -45,6 +46,7 @@
             <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
             <remove name="OPTIONSVerbHandler" />
             <remove name="TRACEVerbHandler" />
+            <remove name="WebDAV" />
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
         </handlers>
         <staticContent>
