--- a/src/Presentation/WebAdmin/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
@@ -144,7 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="module.manifest" />
+    <Content Include="module.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
