--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/packages.config
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/packages.config
@@ -27,11 +27,13 @@
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.2" targetFramework="net45" />
   <package id="Moment.js" version="2.8.2" targetFramework="net451" />
