initialize pages, menu database, remove previous default initiaklize

--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Menu.Data/VirtoCommerce.Content.Menu.Data.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Repositories\IMenuRepository.cs" />
     <Compile Include="Services\IMenuService.cs" />
     <Compile Include="Services\MenuServiceImpl.cs" />
+    <Compile Include="SqlMenuDatabaseInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
