Disabled Browser Link feature for web admin because it leads to huge CPU load.

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Web.config
@@ -10,6 +10,7 @@
     </configSections>
     <connectionStrings configSource="app_data\configuration\connectionStrings.local.config" />
     <appSettings>
+        <add key="vs:EnableBrowserLink" value="false" />
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
         <add key="PreserveLoginUrl" value="true" />
