google analytics, themes initialize

--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.Content.Data/VirtoCommerce.Content.Data.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Repositories\IFileRepository.cs" />
     <Compile Include="Services\IThemeService.cs" />
     <Compile Include="Services\ThemeServiceImpl.cs" />
+    <Compile Include="SqlThemeDatabaseInitializer.cs" />
     <Compile Include="Utility\ContentTypeUtility.cs" />
   </ItemGroup>
   <ItemGroup>
