--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/VirtoCommerce.ThemeModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/VirtoCommerce.ThemeModule.Web.csproj
@@ -63,6 +63,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -101,6 +103,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\themes.css" />
+    <Content Include="Scripts\blades\add-theme.js" />
+    <Content Include="Scripts\blades\add-theme.tpl.html" />
     <Content Include="Scripts\blades\edit-image-asset.tpl.html" />
     <Content Include="Scripts\blades\edit-asset.tpl.html" />
     <Content Include="Scripts\blades\edit-asset.js" />
