pricing - initial pricelists management added (not working)

--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/VirtoCommerce.PricingModule.Web.csproj
@@ -101,13 +101,19 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\blades\pricelist-list.js" />
+    <Content Include="Scripts\blades\pricelist-list.tpl.html" />
     <Content Include="Scripts\blades\item\item-prices-list.js" />
     <Content Include="Scripts\blades\item\item-prices-list.tpl.html" />
     <Content Include="Scripts\blades\item\item-pricelists-list.js" />
     <Content Include="Scripts\blades\item\item-pricelists-list.tpl.html" />
+    <Content Include="Scripts\blades\pricelist-detail.js" />
+    <Content Include="Scripts\blades\pricelist-detail.tpl.html" />
     <Content Include="Scripts\home.tpl.html" />
     <Content Include="Scripts\pricing.js" />
     <Content Include="Scripts\resources\pricing.js" />
+    <Content Include="Scripts\widgets\pricesWidget.js" />
+    <Content Include="Scripts\widgets\pricesWidget.tpl.html" />
     <Content Include="Scripts\widgets\itemPricesWidget.js" />
     <Content Include="Scripts\widgets\itemPricesWidget.tpl.html" />
     <Content Include="Web.config" />
