platform - dedicated settings menu&list added
Former-commit-id: e29bf6c5f9855cc5732635c0d1dc5d45b7e306fb

--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -324,8 +324,8 @@
     <Content Include="Scripts\app\settings\blades\setting-dictionary.tpl.html" />
     <Content Include="Scripts\app\settings\blades\settings-detail.js" />
     <Content Include="Scripts\app\settings\blades\settings-detail.tpl.html" />
-    <Content Include="Scripts\app\settings\blades\settings-list.js" />
-    <Content Include="Scripts\app\settings\blades\settings-list.tpl.html" />
+    <Content Include="Scripts\app\settings\blades\settingGroup-list.js" />
+    <Content Include="Scripts\app\settings\blades\settingGroup-list.tpl.html" />
     <Content Include="Scripts\app\settings\resources\setting.js" />
     <Content Include="Scripts\app\settings\settings.js" />
     <Content Include="Scripts\codemirror\addon\mode\overlay.js" />
