- UPD. Test connection widget updated.
Former-commit-id: 4a6f2194af9ccd65ede32b35fc9e592ba0bc5a9f

--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\avaTax.js" />
+    <Content Include="Scripts\resources\avaTaxApi.js" />
     <Content Include="Scripts\widgets\avataxWidget.js" />
     <Content Include="Scripts\widgets\avataxWidget.tpl.html" />
     <Content Include="Web.config" />
